--- a/static/styles.css
+++ b/static/styles.css
@@ -12,7 +12,7 @@ h2, h3, iframe {
 iframe {
     width: 100%;
     min-height: 600px;
-    border: 1px solid var(--grey-lightest);
+    border: 1px solid var(--grey-200);
 }
 
 p,
@@ -59,14 +59,14 @@ pre {
 
 .info {
     padding: 1rem;
-    border: 1px solid var(--blue-200);
-    color: var(--blue-700);
-    background-color: var(--blue-100);
+    border: 1px solid var(--sky-200);
+    color: var(--sky-700);
+    background-color: var(--sky-100);
     font-size: smaller;
 }
 
 .info a {
-    color: var(--blue-700);
+    color: var(--sky-700);
 }
 
 .warn {
@@ -94,6 +94,6 @@ th, td {
 td {
     font-size: smaller;
     vertical-align: top;
-    border-bottom: 1px solid var(--grey-light);
-    color: var(--grey-darker);
+    border-bottom: 1px solid var(--grey-200);
+    color: var(--grey-600);
 }
