--- a/static/ally-light.css
+++ b/static/ally-light.css
@@ -4,59 +4,59 @@
  * @author ericwbailey
  */
 
-code[class*="language-"],
-pre[class*="language-"] {
-    color: #545454;
-    background: none;
-    font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
-    text-align: left;
-    white-space: pre;
-    word-spacing: normal;
-    word-break: normal;
-    word-wrap: normal;
-    line-height: 1.5;
+code[class*='language-'],
+pre[class*='language-'] {
+	color: #545454;
+	background: none;
+	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+	text-align: left;
+	white-space: pre;
+	word-spacing: normal;
+	word-break: normal;
+	word-wrap: normal;
+	line-height: 1.5;
 
-    -moz-tab-size: 4;
-    -o-tab-size: 4;
-    tab-size: 4;
+	-moz-tab-size: 4;
+	-o-tab-size: 4;
+	tab-size: 4;
 
-    -webkit-hyphens: none;
-    -moz-hyphens: none;
-    -ms-hyphens: none;
-    hyphens: none;
+	-webkit-hyphens: none;
+	-moz-hyphens: none;
+	-ms-hyphens: none;
+	hyphens: none;
 }
 
 /* Code blocks */
-pre[class*="language-"] {
-    padding: 1em;
-    /* margin: .5em 0; SW */
-    overflow: auto;
+pre[class*='language-'] {
+	padding: 1em;
+	/* margin: .5em 0; SW */
+	overflow: auto;
 
-    /* SW */
-    border: 1px solid #f5eeee;
+	/* SW */
+	border: 1px solid #f5eeee;
 }
 
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
-    background: #fefefe;
+:not(pre) > code[class*='language-'],
+pre[class*='language-'] {
+	background: #fefefe;
 }
 
 /* Inline code */
-:not(pre) > code[class*="language-"] {
-    padding: 0.1em;
-    border-radius: 0.3em;
-    white-space: normal;
+:not(pre) > code[class*='language-'] {
+	padding: 0.1em;
+	border-radius: 0.3em;
+	white-space: normal;
 }
 
 .token.comment,
 .token.prolog,
 .token.doctype,
 .token.cdata {
-    color: #696969;
+	color: #696969;
 }
 
 .token.punctuation {
-    color: #545454;
+	color: #545454;
 }
 
 .token.property,
@@ -64,12 +64,12 @@ pre[class*="language-"] {
 .token.constant,
 .token.symbol,
 .token.deleted {
-    color: #007faa;
+	color: #007faa;
 }
 
 .token.boolean,
 .token.number {
-    color: #008000;
+	color: #008000;
 }
 
 .token.selector,
@@ -78,7 +78,7 @@ pre[class*="language-"] {
 .token.char,
 .token.builtin,
 .token.inserted {
-    color: #aa5d00;
+	color: #aa5d00;
 }
 
 .token.operator,
@@ -87,76 +87,76 @@ pre[class*="language-"] {
 .language-css .token.string,
 .style .token.string,
 .token.variable {
-    color: #008000;
+	color: #008000;
 }
 
 .token.atrule,
 .token.attr-value,
 .token.function {
-    color: #aa5d00;
+	color: #aa5d00;
 }
 
 .token.keyword {
-    color: #d91e18;
+	color: #d91e18;
 }
 
 .token.regex,
 .token.important {
-    color: #d91e18;
+	color: #d91e18;
 }
 
 .token.important,
 .token.bold {
-    font-weight: bold;
+	font-weight: bold;
 }
 .token.italic {
-    font-style: italic;
+	font-style: italic;
 }
 
 .token.entity {
-    cursor: help;
+	cursor: help;
 }
 
 @media screen and (-ms-high-contrast: active) {
-    code[class*="language-"],
-    pre[class*="language-"] {
-        color: windowText;
-        background: window;
-    }
+	code[class*='language-'],
+	pre[class*='language-'] {
+		color: windowText;
+		background: window;
+	}
 
-    :not(pre) > code[class*="language-"],
-    pre[class*="language-"] {
-        background: window;
-    }
+	:not(pre) > code[class*='language-'],
+	pre[class*='language-'] {
+		background: window;
+	}
 
-    .token.important {
-        background: highlight;
-        color: window;
-        font-weight: normal;
-    }
+	.token.important {
+		background: highlight;
+		color: window;
+		font-weight: normal;
+	}
 
-    .token.atrule,
-    .token.attr-value,
-    .token.function,
-    .token.keyword,
-    .token.operator,
-    .token.selector {
-        font-weight: bold;
-    }
+	.token.atrule,
+	.token.attr-value,
+	.token.function,
+	.token.keyword,
+	.token.operator,
+	.token.selector {
+		font-weight: bold;
+	}
 
-    .token.attr-value,
-    .token.comment,
-    .token.doctype,
-    .token.function,
-    .token.keyword,
-    .token.operator,
-    .token.property,
-    .token.string {
-        color: highlight;
-    }
+	.token.attr-value,
+	.token.comment,
+	.token.doctype,
+	.token.function,
+	.token.keyword,
+	.token.operator,
+	.token.property,
+	.token.string {
+		color: highlight;
+	}
 
-    .token.attr-value,
-    .token.url {
-        font-weight: normal;
-    }
+	.token.attr-value,
+	.token.url {
+		font-weight: normal;
+	}
 }
