--- a/static/global.css
+++ b/static/global.css
@@ -1,49 +1,47 @@
 :root {
+	--grey-50: #f9fafb;
+	--grey-100: #f3f4f6;
+	--grey-200: #e5e7eb;
+	--grey-300: #d1d5db;
+	--grey-400: #9ca3af;
+	--grey-500: #6b7280;
+	--grey-600: #4b5563;
+	--grey-700: #374151;
+	--grey-800: #1f2937;
+	--grey-900: #111827;
 
-    --grey-50: #f9fafb;
-    --grey-100: #f3f4f6;
-    --grey-200: #e5e7eb;
-    --grey-300: #d1d5db;
-    --grey-400: #9ca3af;
-    --grey-500: #6b7280;
-    --grey-600: #4b5563;
-    --grey-700: #374151;
-    --grey-800: #1f2937;
-    --grey-900: #111827;
+	--white: #ffffff;
 
-    --white: #ffffff;
+	--sky-100: #e0f2fe;
+	--sky-200: #bae6fd;
+	--sky-600: #0284c7;
+	--sky-700: #0369a1;
 
-    --sky-100: #e0f2fe;
-    --sky-200: #bae6fd;
-    --sky-600: #0284c7;
-    --sky-700: #0369a1;
-
-    --red-100: #fee2e2;
-    --red-200: #fecaca;
-    --red-700: #b91c1c;
+	--red-100: #fee2e2;
+	--red-200: #fecaca;
+	--red-700: #b91c1c;
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    -webkit-font-smoothing: antialiased;
-    font-size: 1.125rem;
-    color: var(--grey-700);
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
+		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+	-webkit-font-smoothing: antialiased;
+	font-size: 1.125rem;
+	color: var(--grey-700);
 }
 
 .g-full-bleed {
-    width: 100vw;
-    margin-left: calc(50% - 50vw);
+	width: 100vw;
+	margin-left: calc(50% - 50vw);
 }
 
 .g-wrapper {
-    max-width: 50rem;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0 1rem;
+	max-width: 50rem;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 0 1rem;
 }
 
 a {
-    color: var(--grey-700);
+	color: var(--grey-700);
 }
-
