--- a/static/styles.css
+++ b/static/styles.css
@@ -1,99 +1,102 @@
 h1 {
-    margin-top: 1rem;
-    padding-bottom: 2rem;
-    word-break: break-word;
-    line-height: 1.2;
+	margin-top: 1rem;
+	padding-bottom: 2rem;
+	word-break: break-word;
+	line-height: 1.2;
 }
 
-h2, h3, iframe {
-    margin-top: 2rem;
+h2,
+h3,
+iframe {
+	margin-top: 2rem;
 }
 
 iframe {
-    width: 100%;
-    min-height: 600px;
-    border: 1px solid var(--grey-200);
+	width: 100%;
+	min-height: 600px;
+	border: 1px solid var(--grey-200);
 }
 
 p,
-blockquote{
-    margin-top: 1rem;
-    line-height: 1.9rem;
+blockquote {
+	margin-top: 1rem;
+	line-height: 1.9rem;
 }
 
 blockquote {
-    padding: 1.5rem;
-    background-color: #eee;
-    border-left: 4px solid #bbb;
-    font-size: smaller;
+	padding: 1.5rem;
+	background-color: #eee;
+	border-left: 4px solid #bbb;
+	font-size: smaller;
 }
 
 blockquote p {
-    margin-top: 0;
+	margin-top: 0;
 }
 
 p code {
-    word-break: break-all;
-    font-size: smaller;
+	word-break: break-all;
+	font-size: smaller;
 }
 
 cite {
-    display: block;
-    margin-top: .5rem;
+	display: block;
+	margin-top: 0.5rem;
 }
 
 cite:before {
-    padding-right: .5rem;
-    content: '\2014';
+	padding-right: 0.5rem;
+	content: '\2014';
 }
 
 time {
-    text-transform: uppercase;
-    font-size: smaller;
+	text-transform: uppercase;
+	font-size: smaller;
 }
 
 pre {
-    font-size: 0.8rem;
-    margin-bottom: 2rem;
+	font-size: 0.8rem;
+	margin-bottom: 2rem;
 }
 
 .info {
-    padding: 1rem;
-    border: 1px solid var(--sky-200);
-    color: var(--sky-700);
-    background-color: var(--sky-100);
-    font-size: smaller;
+	padding: 1rem;
+	border: 1px solid var(--sky-200);
+	color: var(--sky-700);
+	background-color: var(--sky-100);
+	font-size: smaller;
 }
 
 .info a {
-    color: var(--sky-700);
+	color: var(--sky-700);
 }
 
 .warn {
-    padding: 1rem;
-    border: 1px solid var(--red-200);
-    color: var(--red-700);
-    background-color: var(--red-100);
-    font-size: smaller;
+	padding: 1rem;
+	border: 1px solid var(--red-200);
+	color: var(--red-700);
+	background-color: var(--red-100);
+	font-size: smaller;
 }
 
 .warn a {
-    color: var(--red-700);
+	color: var(--red-700);
 }
 
 table {
-    margin-top: 2rem;
-    overflow-x: auto;
-    border-collapse: collapse;
+	margin-top: 2rem;
+	overflow-x: auto;
+	border-collapse: collapse;
 }
 
-th, td {
-    padding: 1rem;
+th,
+td {
+	padding: 1rem;
 }
 
 td {
-    font-size: smaller;
-    vertical-align: top;
-    border-bottom: 1px solid var(--grey-200);
-    color: var(--grey-600);
+	font-size: smaller;
+	vertical-align: top;
+	border-bottom: 1px solid var(--grey-200);
+	color: var(--grey-600);
 }
