--- a/static/styles.css
+++ b/static/styles.css
@@ -100,3 +100,14 @@ td {
 	border-bottom: 1px solid var(--grey-200);
 	color: var(--grey-600);
 }
+
+.sr-only {
+	overflow: hidden;
+	position: absolute;
+	margin: -1px;
+	padding: 0;
+	width: 1px;
+	height: 1px;
+	clip: rect(0 0 0 0);
+	border: 0;
+}
