--- a/static/styles.css
+++ b/static/styles.css
@@ -34,10 +34,10 @@ blockquote p {
 	margin-top: 0;
 }
 
-p code {
-	word-break: break-all;
-	font-size: smaller;
-}
+/*p code {*/
+/*	word-break: break-all;*/
+/*	font-size: smaller;*/
+/*}*/
 
 cite {
 	display: block;
